# ocd-gd

./: .gitignore  .readthedocs.yaml  README.md  flake.nix  pyproject.toml  requirements.txt
data/initial_conditions/: chaotic_ics_benchmark_105.npz  chaotic_ics_benchmark_185.npz  chaotic_ics_benchmark_185_0.1.npz  chaotic_ics_benchmark_215.npz  chaotic_ics_benchmark_91_0.1.npz  labeled_ics_benchmark_size_370.npz  labeled_ics_benchmark_size_42.npz  labeled_ics_benchmark_size_962.npz  regular_ics_benchmark_226.npz  regular_ics_benchmark_77.npz  regular_ics_benchmark_777.npz
data/potentials/: MWPotentialHunter24_full.ini
docs/: requirements.txt
docs/source/: conf.py  index.md  modules.rst  ocd_gd.rst
examples/: basic_run.py  batch_plot.py  plots_run.py
outputs/benchmark_results/: F_S3_G20_chaotic_sensitivity.txt  F_S3_G20_regular_sensitivity.txt  S2.5_G20_chaotic_sensitivity.txt  S2.5_G20_regular_sensitivity.txt  S2.75_G20_chaotic_sensitivity.txt  S2.75_G20_regular_sensitivity.txt  S2_G16_chaotic_sensitivity.txt  S2_G16_regular_sensitivity.txt  S3_G18_chaotic_sensitivity.txt  S3_G18_regular_sensitivity.txt  S4_G20_chaotic_sensitivity.txt  S4_G20_regular_sensitivity.txt  S5_S3_G20_chaotic_sensitivity.txt  S5_S3_G20_regular_sensitivity.txt
outputs/reports/: detailed_metrics_subset_100.txt  (+9 more)
scripts/: analyze_grid_result.py  analyze_sensitivity_reports.py  generate_chaotic_ics.py  generate_labelled_ics.py  generate_regular_ics.py  generate_sensitivity_reports.py  generating_CM.py  grid_search.py  plot_grid_misses.py  plot_presistent_misses.py
tests/: test_chaos_sensitivity.py  test_detect_chaos.py  test_indexing.py  test_init.py  test_physics_validation.py  test_private_methods.py  test_properties.py  test_regular_sensitivity.py  test_run.py
(+25 files in other folders)
